@@ -703,7 +703,7 @@ Web
 				<para>
 					You will also need to update the cactiuser account with the old password style.
 				</para>
-				<screen><prompt>shell&gt;</prompt> <userinput>UPDATE mysql.user SET Password = OLD_PASSWORD('cactipwd') 
+				<screen><prompt>shell&gt;</prompt> <userinput>UPDATE mysql.user SET Password = OLD_PASSWORD('cactipwd')
 				WHERE Host = 'localhost' AND User = 'cactiuser';</userinput>
 <prompt>mysql&gt;</prompt> <userinput>FLUSH PRIVILEGES;</userinput></screen>
 			</listitem>
@@ -1404,71 +1404,71 @@ $database_password = "cacti";</userinput></screen>
 				<para><screen><citation>   <emphasis>SNMPv3 Users</emphasis>
        createUser [-e ENGINEID] username (MD5|SHA) authpassphrase [DES|AES] [privpassphrase]
 
-              MD5 and SHA are the authentication types to use.  DES and AES are the privacy 
-              protocols  to  use. If  the  privacy  passphrase  is not specified, it is assumed 
-              to be the same as the authentication passphrase.  Note that the users created will 
-              be useless unless they are also added  to  the  VACM access control tables 
+              MD5 and SHA are the authentication types to use.  DES and AES are the privacy
+              protocols  to  use. If  the  privacy  passphrase  is not specified, it is assumed
+              to be the same as the authentication passphrase.  Note that the users created will
+              be useless unless they are also added  to  the  VACM access control tables
               described above.
 
-              SHA  authentication  and DES/AES privacy require OpenSSL to be installed and the 
-              agent to be built with OpenSSL support.  MD5 authentication may be used without 
+              SHA  authentication  and DES/AES privacy require OpenSSL to be installed and the
+              agent to be built with OpenSSL support.  MD5 authentication may be used without
               OpenSSL.
 
               Warning: the minimum pass phrase length is 8 characters.</citation></screen></para>
 				<para>VACM directives are explained from
 				<userinput>man snmpd.conf</userinput> as follows</para>
 				<para><screen><citation>   <emphasis>VACM Configuration</emphasis>
-       The full flexibility of the VACM is available using four configuration directives - 
-       com2sec, group,  view and access.  These provide direct configuration of the underlying 
+       The full flexibility of the VACM is available using four configuration directives -
+       com2sec, group,  view and access.  These provide direct configuration of the underlying
        VACM tables.
 
        com2sec  [-Cn CONTEXT] SECNAME SOURCE COMMUNITY
-              map  an  SNMPv1 or SNMPv2c community string to a security name - either from a 
-              particular range of source addresses, or globally ("default").  A restricted 
-              source can either be a specific  hostname (or  address),  or  a  subnet - 
-              represented as IP/MASK (e.g. 10.10.10.0/255.255.255.0), or IP/BITS 
+              map  an  SNMPv1 or SNMPv2c community string to a security name - either from a
+              particular range of source addresses, or globally ("default").  A restricted
+              source can either be a specific  hostname (or  address),  or  a  subnet -
+              represented as IP/MASK (e.g. 10.10.10.0/255.255.255.0), or IP/BITS
               (e.g. 10.10.10.0/24), or the IPv6 equivalents.
 
-              The same community string can be specified in several separate directives 
-              (presumably with different  source  tokens), and the first source/community 
-              combination that matches the incoming request will be selected.  Various 
+              The same community string can be specified in several separate directives
+              (presumably with different  source  tokens), and the first source/community
+              combination that matches the incoming request will be selected.  Various
               source/community combinations can also map to the same security name.
 
-              If a CONTEXT is specified (using -Cn), the community string will be mapped 
-              to a security  name  in the named SNMPv3 context. Otherwise the default 
+              If a CONTEXT is specified (using -Cn), the community string will be mapped
+              to a security  name  in the named SNMPv3 context. Otherwise the default
               context ("") will be used.
 
        group GROUP {v1|v2c|usm} SECNAME
-              maps  a  security name (in the specified security model) into a named group.  
-              Several group directives can specify the same group name, allowing a single 
+              maps  a  security name (in the specified security model) into a named group.
+              Several group directives can specify the same group name, allowing a single
               access setting to apply to several  users and/or community strings.
 
-              Note  that  groups must be set up for the two community-based models separately - 
-              a single com2sec (or equivalent) directive will typically be accompanied by two 
+              Note  that  groups must be set up for the two community-based models separately -
+              a single com2sec (or equivalent) directive will typically be accompanied by two
               group directives.
 
        view VNAME TYPE OID [MASK]
-              defines a named "view" - a subset of the overall OID tree. This is most commonly 
-              a single subtree, but  several view directives can be given with the same view 
-              name, to build up a more complex collection of OIDs.  TYPE is either included 
-              or excluded, which can again define a more complex view (e.g by excluding certain 
+              defines a named "view" - a subset of the overall OID tree. This is most commonly
+              a single subtree, but  several view directives can be given with the same view
+              name, to build up a more complex collection of OIDs.  TYPE is either included
+              or excluded, which can again define a more complex view (e.g by excluding certain
               sensitive objects from an otherwise accessible subtree).
 
-              MASK is a list of hex octets (separated by <quote>.</quote> or <quote>:</quote>) 
+              MASK is a list of hex octets (separated by <quote>.</quote> or <quote>:</quote>)
               with the set bits indicating which subidentifiers in the view OID to match against.
               This can be used to define a view covering a particular row  (or  rows) in a table.
-              If not specified, this defaults to matching the OID exactly (all bits set), thus 
+              If not specified, this defaults to matching the OID exactly (all bits set), thus
               defining a simple OID subtree.
 
        access GROUP CONTEXT {any|v1|v2c|usm} LEVEL PREFX READ WRITE NOTIFY
-              maps from a group of users/communities (with a particular security model 
-              and  minimum  security level, and in a specific context) to one of three views, 
+              maps from a group of users/communities (with a particular security model
+              and  minimum  security level, and in a specific context) to one of three views,
               depending on the request being processed.
 
-              LEVEL is one of noauth, auth, or priv.  PREFX specifies how CONTEXT should be 
-              matched against  the context  of  the  incoming  request, either exact or prefix.  
-              READ, WRITE and NOTIFY specifies the view to be used for GET*, SET and 
-              TRAP/INFORM requests (althought the NOTIFY view is not currently used).  For 
+              LEVEL is one of noauth, auth, or priv.  PREFX specifies how CONTEXT should be
+              matched against  the context  of  the  incoming  request, either exact or prefix.
+              READ, WRITE and NOTIFY specifies the view to be used for GET*, SET and
+              TRAP/INFORM requests (althought the NOTIFY view is not currently used).  For
               v1 or v2c access, LEVEL will need to be noauth.</citation></screen></para>
 
               <para>As an example, following definitions in the snmpd configuration
@@ -1665,7 +1665,7 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 			users. By default this user only has rights to view, but not change all graphs. This enables any
 			unauthenticated user to visit 'graph_view.php' and view your graphs. This behavior can be changed by
 			either changing the realm permissions for the "guest" user, or disabling the guest user altogether
-			under <guilabel>Cacti Settings</guilabel>.  By default in 0.8.7 and later, the "guest" user is not 
+			under <guilabel>Cacti Settings</guilabel>.  By default in 0.8.7 and later, the "guest" user is not
 			set in the setting, effectively disabling "guest" (Unauthenticated) access to Cacti.
 		</para>
 
@@ -1791,14 +1791,14 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 					when this box is checked.
 				</para>
 			</sect2>
-	
+
 		</sect1>
 		<sect1 id="create_new_user">
 			<title>Creating a New User</title>
 			<para>
 				To create a new user, select the <guilabel>User Management</guilabel> item under the
 				<guilabel>Utilities</guilabel> heading on the Cacti menu. Once at the user management screen,
-				click <guilabel>Add</guilabel>. 
+				click <guilabel>Add</guilabel>.
 			</para>
 			<figure id="img_user_new">
 				<title>Adding a User</title>
@@ -1812,8 +1812,8 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 			<para>
 				At minimum, you must specify a <guilabel>User Name</guilabel> and
 				a <guilabel>Password</guilabel> for each user. Each user field is described in more detail
-				in the Editing an existing User section previous to this one. In addition to these fields, 
-				each user can have their own realm permissions", graph permissions, and graph settings. Each 
+				in the Editing an existing User section previous to this one. In addition to these fields,
+				each user can have their own realm permissions", graph permissions, and graph settings. Each
 				of these items are described in editing existing users section of the manual.
 			</para>
 		</sect1>
@@ -1831,8 +1831,8 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 			<para>
 				To copy a user to a new user, select the <guilabel>User Management</guilabel> item under the
 				<guilabel>Utilities</guilabel> heading on the Cacti menu. Once at the user management screen,
-				select the user you would like to copy from and select copy from the <guilabel>Action</guilabel> 
-				selection box, click <guilabel>Go</guilabel> to continue.  If you select multiple users, 
+				select the user you would like to copy from and select copy from the <guilabel>Action</guilabel>
+				selection box, click <guilabel>Go</guilabel> to continue.  If you select multiple users,
 				only the first selected user will be used as the source user.
 			</para>
 			<figure id="img_user_copy_2">
@@ -1845,10 +1845,10 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 				</mediaobject>
 			</figure>
 			<para>
-				Specify the <guilabel>New Username</guilabel>, <guilabel>New Full Name</guilabel> and 
-				<guilabel>New Realm</guilabel> of the new user.  Click <guilabel>Yes</guilabel> to copy the 
+				Specify the <guilabel>New Username</guilabel>, <guilabel>New Full Name</guilabel> and
+				<guilabel>New Realm</guilabel> of the new user.  Click <guilabel>Yes</guilabel> to copy the
 				selected template user to the the designated new user.  An error will be returned if you attempt
-				to copy over an existing user.  If you would like to copy over an existing user, use 
+				to copy over an existing user.  If you would like to copy over an existing user, use
 				<guilabel>Batch Copy</guilabel>.
 			</para>
 		</sect1>
@@ -1864,10 +1864,10 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 				</mediaobject>
 			</figure>
 			<para>
-				To enable or disable a set of or a single user, select the <guilabel>User Management</guilabel> 
-				item under the <guilabel>Utilities</guilabel> heading on the Cacti menu. Once at the user management 
-				screen, select the user(s) you would like to enable or disable and select enable or disable from the 
-				<guilabel>Action</guilabel> selection box, click <guilabel>Go</guilabel> to continue. 
+				To enable or disable a set of or a single user, select the <guilabel>User Management</guilabel>
+				item under the <guilabel>Utilities</guilabel> heading on the Cacti menu. Once at the user management
+				screen, select the user(s) you would like to enable or disable and select enable or disable from the
+				<guilabel>Action</guilabel> selection box, click <guilabel>Go</guilabel> to continue.
 			</para>
 			<figure id="img_user_enable_disable_2">
 				<title>Enable/Disable Users Part 2</title>
@@ -1879,7 +1879,7 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 				</mediaobject>
 			</figure>
 			<para>
-				Confirm that you want to disable or enable the listed users. Click <guilabel>Yes</guilabel> to  
+				Confirm that you want to disable or enable the listed users. Click <guilabel>Yes</guilabel> to
 				perform the action.  Disabling your own account is possible and not recommended, as once you logoff
 				you will not be able to return.
 			</para>
@@ -1887,9 +1887,9 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 		<sect1 id="batch_copy_users">
 			<title>Batch Copy Users</title>
 			<para>
-				Batch Copy is a helpful utility that helps Cacti Administrators maintain users.  Because Cacti 
-				does not yet support groups, it is important that there is some way to mass update users.  This 
-				what Batch Copy does for you. 
+				Batch Copy is a helpful utility that helps Cacti Administrators maintain users.  Because Cacti
+				does not yet support groups, it is important that there is some way to mass update users.  This
+				what Batch Copy does for you.
 			</para>
 			<figure id="img_user_batch_copy_1">
 				<title>Batch Copy Users Part 1</title>
@@ -1901,9 +1901,9 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 				</mediaobject>
 			</figure>
 			<para>
-				To Batch Copy a set of or a single user, select the <guilabel>User Management</guilabel> 
-				item under the <guilabel>Utilities</guilabel> heading on the Cacti menu. Once at the user management 
-				screen, select the user(s) you would like to batch copy information to and select "Batch Copy" from the 
+				To Batch Copy a set of or a single user, select the <guilabel>User Management</guilabel>
+				item under the <guilabel>Utilities</guilabel> heading on the Cacti menu. Once at the user management
+				screen, select the user(s) you would like to batch copy information to and select "Batch Copy" from the
 				<guilabel>Action</guilabel> selection box, click <guilabel>Go</guilabel> to continue.
 			</para>
 			<figure id="img_user_batch_copy_2">
@@ -1916,11 +1916,11 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 				</mediaobject>
 			</figure>
 			<para>
-				Select the <guilabel>Template User</guilabel> and confirm that you want to Batch Copy the listed users. 
-				Click <guilabel>Yes</guilabel> to perform the action. 
+				Select the <guilabel>Template User</guilabel> and confirm that you want to Batch Copy the listed users.
+				Click <guilabel>Yes</guilabel> to perform the action.
 			</para>
 			<para>
-				It is important to note that when using <guilabel>Batch Copy</guilabel> the original user(s) Full Name, 
+				It is important to note that when using <guilabel>Batch Copy</guilabel> the original user(s) Full Name,
 				Password, Realm and Enable status will be retained, all other fields will be overwritten with values from
 				the selected template user.
 			</para>
@@ -1937,10 +1937,10 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 				</mediaobject>
 			</figure>
 			<para>
-				To delete a set of or a single user, select the <guilabel>User Management</guilabel> 
-				item under the <guilabel>Utilities</guilabel> heading on the Cacti menu. Once at the user management 
-				screen, select the user(s) you would like to delete and select delete from the 
-				<guilabel>Action</guilabel> selection box, click <guilabel>Go</guilabel> to continue. 
+				To delete a set of or a single user, select the <guilabel>User Management</guilabel>
+				item under the <guilabel>Utilities</guilabel> heading on the Cacti menu. Once at the user management
+				screen, select the user(s) you would like to delete and select delete from the
+				<guilabel>Action</guilabel> selection box, click <guilabel>Go</guilabel> to continue.
 			</para>
 			<figure id="img_user_delete_2">
 				<title>Delete Users Part 2</title>
@@ -1952,25 +1952,25 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 				</mediaobject>
 			</figure>
 			<para>
-				Confirm that you want to delete the listed users. Click <guilabel>Yes</guilabel> to  
+				Confirm that you want to delete the listed users. Click <guilabel>Yes</guilabel> to
 				perform the action.  Deleting your own account is possible and not recommended.
 			</para>
 		</sect1>
 		<sect1 id="guest_access">
 			<title>Guest (Anonymous) Access </title>
 			<para>
-				By default in 0.8.7 and later of Cacti, Guest or Anonymous access is disabled.  This is 
+				By default in 0.8.7 and later of Cacti, Guest or Anonymous access is disabled.  This is
 				shift from previous release that came with the "Guest" user enabled and set.
 			</para>
 			<para>
-				Enabling "Guest" access is easy.  But, you must understand that you should only allow the 
-				designated "Guest" user access to what you authorized.  It is not sugguested that you give 
-				the designated "Guest" user more than just access to graphs.  To enable guest access, first, 
-				need a designated "Guest" user.  Cacti by default comes with one already created that has 
+				Enabling "Guest" access is easy.  But, you must understand that you should only allow the
+				designated "Guest" user access to what you authorized.  It is not sugguested that you give
+				the designated "Guest" user more than just access to graphs.  To enable guest access, first,
+				need a designated "Guest" user.  Cacti by default comes with one already created that has
 				access to only graphs.   It is important to note that the default guest user has access to all
-				graphs on the system.  Once you have created the "Guest" user, you need to tell Cacti what 
-				the "Guest" user is.  This is done by updating the Authenication Settings and selecting the 
-				"Guest" user you have designated.  The "Guest" user must be enabled and be set as the guest 
+				graphs on the system.  Once you have created the "Guest" user, you need to tell Cacti what
+				the "Guest" user is.  This is done by updating the Authenication Settings and selecting the
+				"Guest" user you have designated.  The "Guest" user must be enabled and be set as the guest
 				user for anonymous access to work.
 			</para>
 		</sect1>
@@ -2845,7 +2845,7 @@ IF-MIB::ifType.3 = INTEGER: ethernetCsmacd(6)
 								<entry>Choose whether you would like to use --alt-autoscale or --alt-autoscale-max on the graph. The <ulink url="http://oss.oetiker.ch/rrdtool/doc/rrdgraph.en.html">RRDTool graph manual</ulink> says: <quote>Where --alt-autoscale will modify both the absolute maximum AND minimum values, this option will only affect the maximum value. The minimum value, if not defined on the command line, will be 0. This option can be useful when graphing router traffic when the WAN line uses compression, and thus the throughput may be higher than the WAN line speed</quote>.</entry>
 							</row>
 							<row>
-								<entry>Logarithmic Auto Scaling</entry>
+								<entry>Logarithmic Scaling</entry>
 								<entry>Choose if you want logarithmic y-axis scaling.</entry>
 							</row>
 							<row>
@@ -3820,7 +3820,7 @@ print int(rand(10));</programlisting>
 						</listitem>
 						<listitem>
 							<para>
-								Logarithmic Auto Scaling: unchecked
+								Logarithmic Scaling: unchecked
 							</para>
 						</listitem>
 						<listitem>
